--- a/SimpleOrderWebApi/SimpleOrderWebApi.csproj
+++ b/SimpleOrderWebApi/SimpleOrderWebApi.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
